--- a/main.css
+++ b/main.css
@@ -1,16 +1,29 @@
+body {
+	background-color:#;
+}
 h1 {
 	font-family:Impact, Charcoal, sans-serif;
 	color:#F0FFFF;
 	font-size:30px;
 	background-color:#000000;
-	border:solid 2px #A9A9A9;
+	border:solid 5px #A9A9A9;
+	border-bottom-style:dotted;
+	border-right-style:ridge;
+	border-left-style:ridge;
+	border-top-style:double;
+	margin-right:150px;
+	margin-left:100px;
 }
 h2 {
 	font-family:"Arial Black", Gadget, sans-serif;
 	color:#F0FFFF;
 	font-size:24px;
+	font-style: oblique;
 	background-color:#000000;
 	border:solid 2px #A9A9A9;
+	border-top-style:dotted;
+	margin-right:150px;
+	margin-left:100px;
 }
 p {
 	font-family:"Courier New", Courier, monospace;
@@ -18,6 +31,8 @@ p {
 	font-size:13px;
 	background-color:#A9A9A9;
 	border:solid 1px #000000;
+	margin-right:200px;
+	margin-left:150px;
 }
 nav {
 	font-family:"Courier New", Courier, monospace;
@@ -25,6 +40,8 @@ nav {
 	font-size:13px;
 	background-color:#A9A9A9;
 	border:solid 0px #000000;
+	margin-right:200px;
+	margin-left:150px;
 }
 footer {
 	font-family:"Lucida Console", Monaco, monospace;
